Item8144:    * created a Plugins class and moved in the static methods from Plugin    * impl'ed memory caching for plugin stub classes, configurable using {MemoryCache}    * added {DefaultPlugins} config param so that jquery-all is deprecated now    * removed jquery-all from jquery.foswiki plugin as that's configurable now    * added {JQueryVersion} config param    * added {JQueryTheme} config param    * added perl stubs for default plugins...still some to go    * added warnings for those jQuery plugins that still have no perl stub
git-svn-id: http://svn.foswiki.org/trunk@3830 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/JQueryPlugin/pub/System/JQueryPlugin/Makefile
+++ b/JQueryPlugin/pub/System/JQueryPlugin/Makefile
@@ -1,11 +1,8 @@
 SUBDIRS=i18n plugins themes ui
-TARGET=jquery-all.js
-#JQUERY_VERSION=jquery-1.3.2.js
-JQUERY_VERSION=jquery-1.3.2p1.js
-JQUERY_VERSION=jquery-1.2.6.js
+TARGET=jquery-all.js jquery-1.2.6.js jquery-1.3.2.js jquery-1.3.2p1.js
 
 JS_SOURCES=\
-  jquery.js \
+  jquery-1.2.6.js \
   plugins/easing/jquery.easing.js \
   plugins/metadata/jquery.metadata.js \
   plugins/bgiframe/jquery.bgiframe.js \
@@ -13,13 +10,12 @@ JS_SOURCES=\
   plugins/foswiki/jquery.foswiki.js
 
 -include Makefile.include
+
+# DEPRECATED, provided for backwards compatibility
 jquery-all.js: $(JS_SOURCES) Makefile
 	@echo creating $@
 	@$(MINIFYJS) $(JS_SOURCES) > $@
 
-jquery-1.3.2p1.js: jquery-1.3.2.js jquery.patch
+jquery-1.3.2p1.uncompressed.js: jquery-1.3.2.uncompressed.js jquery.patch
 	@echo patching $<
 	@$(PATCH) -i jquery.patch -o $@
-
-jquery.uncompressed.js: $(JQUERY_VERSION) Makefile
-	@$(CAT) $< > $@
