--- a/JQueryPlugin/pub/System/JQueryPlugin/plugins/autocomplete/Makefile
+++ b/JQueryPlugin/pub/System/JQueryPlugin/plugins/autocomplete/Makefile
@@ -1,2 +1,2 @@
-TARGET=jquery.autocomplete.js jquery.autocomplete.css
+TARGET=jquery.autocomplete.js jquery.autocomplete.css $(JQUERYPLUGIN_LIB)/AUTOCOMPLETE.pm
 -include ../../Makefile.include
