--- a/JQueryPlugin/pub/System/JQueryPlugin/plugins/empty/Makefile
+++ b/JQueryPlugin/pub/System/JQueryPlugin/plugins/empty/Makefile
@@ -1,2 +1,2 @@
-TARGET=jquery.empty.js jquery.empty.css
+TARGET=jquery.empty.js jquery.empty.css $(JQUERYPLUGIN_LIB)/EMPTY.pm
 -include ../../Makefile.include
