--- a/JQueryPlugin/pub/System/JQueryPlugin/plugins/farbtastic/Makefile
+++ b/JQueryPlugin/pub/System/JQueryPlugin/plugins/farbtastic/Makefile
@@ -1,2 +1,2 @@
-TARGET=farbtastic.js farbtastic.css
+TARGET=farbtastic.js farbtastic.css $(JQUERYPLUGIN_LIB)/FARBTASTIC.pm
 -include ../../Makefile.include
