--- a/JQueryPlugin/pub/System/JQueryPlugin/plugins/rating/Makefile
+++ b/JQueryPlugin/pub/System/JQueryPlugin/plugins/rating/Makefile
@@ -1,2 +1,2 @@
-TARGET=jquery.rating.js jquery.rating.css
+TARGET=jquery.rating.js jquery.rating.css $(JQUERYPLUGIN_LIB)/RATING.pm
 -include ../../Makefile.include
