--- a/JQueryPlugin/pub/System/JQueryPlugin/plugins/superfish/Makefile
+++ b/JQueryPlugin/pub/System/JQueryPlugin/plugins/superfish/Makefile
@@ -1,2 +1,2 @@
-TARGET=jquery.superfish.js jquery.superfish.css
+TARGET=jquery.superfish.js jquery.superfish.css $(JQUERYPLUGIN_LIB)/SUPERFISH.pm
 -include ../../Makefile.include
