--- a/JQueryPlugin/pub/System/JQueryPlugin/plugins/tabpane/Makefile
+++ b/JQueryPlugin/pub/System/JQueryPlugin/plugins/tabpane/Makefile
@@ -1,2 +1,2 @@
-TARGET=jquery.tabpane.js jquery.tabpane.css
+TARGET=jquery.tabpane.js jquery.tabpane.css $(JQUERYPLUGIN_LIB)/TABPANE.pm
 -include ../../Makefile.include
