--- a/JQueryPlugin/pub/System/JQueryPlugin/plugins/validate/Makefile
+++ b/JQueryPlugin/pub/System/JQueryPlugin/plugins/validate/Makefile
@@ -1,2 +1,2 @@
-TARGET=jquery.validate.js jquery.validate.additional-methods.js
+TARGET=jquery.validate.js jquery.validate.additional-methods.js $(JQUERYPLUGIN_LIB)/VALIDATE.pm
 -include ../../Makefile.include
