--- a/JQueryPlugin/pub/System/JQueryPlugin/plugins/nifty/Makefile
+++ b/JQueryPlugin/pub/System/JQueryPlugin/plugins/nifty/Makefile
@@ -1,2 +1,2 @@
-TARGET=jquery.nifty.js jquery.nifty.css jquery.rounded.js
+TARGET=jquery.nifty.js jquery.nifty.css jquery.rounded.js $(JQUERYPLUGIN_LIB)/NIFTY.pm
 -include ../../Makefile.include
