--- a/JQueryPlugin/pub/System/JQueryPlugin/plugins/simplemodal/Makefile
+++ b/JQueryPlugin/pub/System/JQueryPlugin/plugins/simplemodal/Makefile
@@ -1,2 +1,2 @@
-TARGET=jquery.simplemodal.js jquery.simplemodal.css
+TARGET=jquery.simplemodal.js jquery.simplemodal.css $(JQUERYPLUGIN_LIB)/SIMPLEMODAL.pm
 -include ../../Makefile.include
