--- a/JQueryPlugin/pub/System/JQueryPlugin/plugins/tooltip/Makefile
+++ b/JQueryPlugin/pub/System/JQueryPlugin/plugins/tooltip/Makefile
@@ -1,2 +1,2 @@
-TARGET=jquery.tooltip.js jquery.tooltip.css
+TARGET=jquery.tooltip.js jquery.tooltip.css $(JQUERYPLUGIN_LIB)/TOOLTIP.pm
 -include ../../Makefile.include
