Item8144:    * fixed async jquery.treeview    * simplified plugin dependencies and header construction
git-svn-id: http://svn.foswiki.org/trunk@3831 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/JQueryPlugin/pub/System/JQueryPlugin/plugins/treeview/Makefile
+++ b/JQueryPlugin/pub/System/JQueryPlugin/plugins/treeview/Makefile
@@ -1,10 +1,8 @@
-TARGET=jquery.treeview.js jquery.treeview.css $(JQUERYPLUGIN_LIB)/TREEVIEW.pm
+TARGET=\
+  jquery.treeview.js \
+  jquery.treeview.async.js \
+  jquery.treeview.init.js \
+  jquery.treeview.css \
+  $(JQUERYPLUGIN_LIB)/TREEVIEW.pm
+
 -include ../../Makefile.include
-
-JS_SOURCES=\
-  jquery.treeview.uncompressed.js \
-  jquery.treeview.init.uncompressed.js
-
-jquery.treeview.js: $(JS_SOURCES)
-	@echo creating $@ 
-	@$(MINIFYJS) $(JS_SOURCES) > $@
