Item8144:    * added warn param to JQREQUIRE to surpress warn messages    * added perl stubs for shrinkurls, debug, chili, simplemodal, cookie and media    * added jquery.noconflict initialiser that can be switched on/off usin configure    * added jquery.media.init to create embedded media objects in all      <div class=".media">...</div> container    * added css for jquery.debug    * improved jquery.debug to scroll to bottom after a message has ben added to the #DEBUG div    * added a dummy $.log() and $.fn.debug() to be overriden on an enabled jquery.debug    * replaced all local writeDebug() with $.log()    * added a librariy of JQueryAjaxHelper to create ajax autocomplete input fields easily    * added a roadmap for a rough 2.0, 2.1, 2.2, 2.3 and 3.0 releases
git-svn-id: http://svn.foswiki.org/trunk@3836 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/JQueryPlugin/pub/System/JQueryPlugin/plugins/chili/Makefile
+++ b/JQueryPlugin/pub/System/JQueryPlugin/plugins/chili/Makefile
@@ -1,2 +1,2 @@
-TARGET=jquery.chili.js $(JQUERYPLUGIN_LIB)/CHILI.pm
+TARGET=jquery.chili.js jquery.chili.init.js $(JQUERYPLUGIN_LIB)/CHILI.pm
 -include ../../Makefile.include
