--- a/JQueryPlugin/pub/System/JQueryPlugin/plugins/debug/Makefile
+++ b/JQueryPlugin/pub/System/JQueryPlugin/plugins/debug/Makefile
@@ -1,2 +1,2 @@
-TARGET=jquery.debug.js $(JQUERYPLUGIN_LIB)/DEBUG.pm
+TARGET=jquery.debug.js jquery.debug.css $(JQUERYPLUGIN_LIB)/DEBUG.pm
 -include ../../Makefile.include
