--- a/JQueryPlugin/pub/System/JQueryPlugin/plugins/media/Makefile
+++ b/JQueryPlugin/pub/System/JQueryPlugin/plugins/media/Makefile
@@ -1,2 +1,2 @@
-TARGET=jquery.media.js $(JQUERYPLUGIN_LIB)/MEDIA.pm
+TARGET=jquery.media.js jquery.media.init.js $(JQUERYPLUGIN_LIB)/MEDIA.pm
 -include ../../Makefile.include
