Item8144:    * added initializer for jquery.tooltip    * added example on how to use tootips    * added example on how to load tabs async'y    * fixed chili not being able to extract the proper recipe when there is metadata in the class attr
git-svn-id: http://svn.foswiki.org/trunk@3852 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/JQueryPlugin/pub/System/JQueryPlugin/plugins/tooltip/Makefile
+++ b/JQueryPlugin/pub/System/JQueryPlugin/plugins/tooltip/Makefile
@@ -1,2 +1,2 @@
-TARGET=jquery.tooltip.js jquery.tooltip.css $(JQUERYPLUGIN_LIB)/TOOLTIP.pm
+TARGET=jquery.tooltip.js jquery.tooltip.init.js jquery.tooltip.css $(JQUERYPLUGIN_LIB)/TOOLTIP.pm
 -include ../../Makefile.include
