Item8144:    * updated jquery.maskedinput    * added perl stub and a js initializer for it    * fixed jquery.validate to work with noConfict enabled    * fixed BUTTON to work with noConfict enabled    * extended example for client-side form validation using jquery.validate + jquery.maskedinput
git-svn-id: http://svn.foswiki.org/trunk@3856 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/JQueryPlugin/pub/System/JQueryPlugin/plugins/maskedinput/Makefile
+++ b/JQueryPlugin/pub/System/JQueryPlugin/plugins/maskedinput/Makefile
@@ -1,2 +1,2 @@
-TARGET=jquery.maskedinput.js $(JQUERYPLUGIN_LIB)/MASKEDINPUT.pm
+TARGET=jquery.maskedinput.js jquery.maskedinput.init.js $(JQUERYPLUGIN_LIB)/MASKEDINPUT.pm
 -include ../../Makefile.include
