Item8144:   * added jquery.focus, jquery.textboxlist, jquery.farbtastic jquery.gradient   * added =color= and =textboxlist= formfield types   * made JQueryPlugin pluggable itself   * added animation switching tabs   * improved automaxexpand feature in tabs   * performance improvements for ajax helper, i.e. user selector   * improved jquery.empty template for new jquery plugins
git-svn-id: http://svn.foswiki.org/trunk@4286 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/JQueryPlugin/pub/System/JQueryPlugin/plugins/Makefile
+++ b/JQueryPlugin/pub/System/JQueryPlugin/plugins/Makefile
@@ -1,17 +1,19 @@
 SUBDIRS=\
   autocomplete \
   bgiframe \
-  blockUI \
+  blockui \
   button \
   chili \
   cookie \
   cycle \
   debug \
   easing \
-  empty \
+  farbtastic \
+  focus \
   form \
   foswiki \
-  hoverIntent \
+  gradient \
+  hoverintent \
   ifixpng \
   innerfade \
   maskedinput \
@@ -25,6 +27,7 @@ SUBDIRS=\
   spinner \
   superfish \
   tabpane \
+  textboxlist \
   tooltip \
   treeview \
   validate \
