--- a/JQueryPlugin/pub/System/JQueryPlugin/plugins/farbtastic/Makefile
+++ b/JQueryPlugin/pub/System/JQueryPlugin/plugins/farbtastic/Makefile
@@ -1,2 +1,6 @@
-TARGET=farbtastic.js farbtastic.css $(JQUERYPLUGIN_LIB)/FARBTASTIC.pm
+TARGET=\
+  jquery.farbtastic.js \
+  jquery.farbtastic.css \
+  jquery.farbtastic.init.js \
+  $(JQUERYPLUGIN_LIB)/FARBTASTIC.pm
 -include ../../Makefile.include
