--- a/JQueryPlugin/pub/System/JQueryPlugin/plugins/empty/Makefile
+++ b/JQueryPlugin/pub/System/JQueryPlugin/plugins/empty/Makefile
@@ -1,2 +1,6 @@
-TARGET=jquery.empty.js jquery.empty.css $(JQUERYPLUGIN_LIB)/EMPTY.pm
+TARGET=\
+  jquery.empty.js \
+  jquery.empty.css \
+  $(JQUERYPLUGIN_LIB)/EMPTY.pm
+
 -include ../../Makefile.include
