Item1947:    * made JQueryPlugin SafeWikiPlugin compatible, i.e. %BUTTON, %TOGGLE and %TABPANE    * added hoverintent to superfish menu dependencies as without menus are much      to squirrelly    * removed deprecated jquery-all.js files    * added some more nice jqTreeview themes    * FOSWIKI object initializer recognizes json now as well    * some minor fixes to jquery.textboxlist plugin
git-svn-id: http://svn.foswiki.org/trunk@4688 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/JQueryPlugin/pub/System/JQueryPlugin/Makefile
+++ b/JQueryPlugin/pub/System/JQueryPlugin/Makefile
@@ -1,5 +1,5 @@
 SUBDIRS=i18n plugins themes ui
-TARGET=jquery-all.js jquery-1.2.6.js jquery-1.3.2.js jquery-1.3.2p1.js
+TARGET=jquery-1.2.6.js jquery-1.3.2.js jquery-1.3.2p1.js
 
 JS_SOURCES=\
   jquery-1.2.6.js \
@@ -10,11 +10,6 @@ JS_SOURCES=\
   plugins/foswiki/jquery.foswiki.js
 
 -include Makefile.include
-
-# DEPRECATED, provided for backwards compatibility
-jquery-all.js: $(JS_SOURCES) Makefile
-	@echo creating $@
-	@$(MINIFYJS) $(JS_SOURCES) > $@
 
 jquery-1.3.2p1.uncompressed.js: jquery-1.3.2.uncompressed.js jquery.patch
 	@echo patching $<
