--- a/JQueryPlugin/pub/System/JQueryPlugin/plugins/button/Makefile
+++ b/JQueryPlugin/pub/System/JQueryPlugin/plugins/button/Makefile
@@ -1,2 +1,6 @@
-TARGET=jquery.button.css $(JQUERYPLUGIN_LIB)/BUTTON.pm
+TARGET=\
+  jquery.button.css \
+  jquery.button.init.js \
+  $(JQUERYPLUGIN_LIB)/BUTTON.pm
+
 -include ../../Makefile.include
