--- a/JQueryPlugin/pub/System/JQueryPlugin/plugins/tabpane/Makefile
+++ b/JQueryPlugin/pub/System/JQueryPlugin/plugins/tabpane/Makefile
@@ -1,2 +1,7 @@
-TARGET=jquery.tabpane.js jquery.tabpane.css $(JQUERYPLUGIN_LIB)/TABPANE.pm
+TARGET=\
+  jquery.tabpane.js \
+  jquery.tabpane.init.js \
+  jquery.tabpane.css \
+  $(JQUERYPLUGIN_LIB)/TABPANE.pm
+
 -include ../../Makefile.include
