--- a/core/tools/pkg/debian/control
+++ b/core/tools/pkg/debian/control
@@ -8,7 +8,7 @@ Standards-Version: 3.8.0
 Package: foswiki
 Architecture: all
 Depends: ${perl:Depends}, libnet-perl, libmime-base64-perl, rcs (>= 5.7), apache | apache2 | apache2.2, debconf (>=  0.5) | debconf-2.0, libalgorithm-diff-perl, liberror-perl, libdigest-sha1-perl, libtext-diff-perl, liblocale-maketext-lexicon-perl, libcgi-session-perl, liburi-perl, libhtml-parser-perl
-Suggests: libunicode-maputf8-perl, libapache-mod-perl, libapache2-mod-perl2
+Suggests: libunicode-maputf8-perl, libapache-mod-perl, libapache2-mod-perl2, libapache2-mod-auth-plain
 Description: A Web Based Collaboration Platform
  Foswiki is a modern CGI-based implementation of the Wiki collaboration platform
  originally developed for OOP/Patterns collaboration.  In addition to the
