Item1766: fixup for debian package using ShorterUrls
git-svn-id: http://svn.foswiki.org/trunk@4769 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/core/tools/pkg/debian/ShorterUrl.conf
+++ b/core/tools/pkg/debian/ShorterUrl.conf
@@ -14,5 +14,6 @@
     RewriteEngine on
     RewriteRule ^$ /cgi-bin/foswiki/view/$1 [PT] [L]
     RewriteRule ^([A-Z].*) /cgi-bin/foswiki/view/$1 [PT] [L]
+    RewriteRule ^(foswiki_redirect_cache.*) /cgi-bin/foswiki/view/$1 [PT] [L]
 </Directory>
 
