Item8023: copy 1.0.x packaging onto Release01x00 branch so trunk and release can evolve separately
git-svn-id: http://svn.foswiki.org/branches/Release01x00@4970 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/core/tools/pkg/debian/apache.conf
+++ b/core/tools/pkg/debian/apache.conf
@@ -15,86 +15,10 @@
 # BrowserMatchNoCase ^SiteSucker blockAccess
 # BrowserMatchNoCase ^$ blockAccess
 
-BrowserMatchNoCase ^Accoona blockAccess
-BrowserMatchNoCase ^ActiveAgent blockAccess
-BrowserMatchNoCase ^Attache blockAccess
-BrowserMatchNoCase BecomeBot blockAccess
-BrowserMatchNoCase ^bot blockAccess
-BrowserMatchNoCase Charlotte/ blockAccess
-BrowserMatchNoCase ^ConveraCrawler blockAccess
-BrowserMatchNoCase ^CrownPeak-HttpAgent blockAccess
-BrowserMatchNoCase ^EmailCollector blockAccess
-BrowserMatchNoCase ^EmailSiphon blockAccess
-BrowserMatchNoCase ^e-SocietyRobot blockAccess
-BrowserMatchNoCase ^Exabot blockAccess
-BrowserMatchNoCase ^FAST blockAccess
-BrowserMatchNoCase ^FDM blockAccess
-BrowserMatchNoCase ^GetRight/6.0a blockAccess
-BrowserMatchNoCase ^GetWebPics blockAccess
-BrowserMatchNoCase ^Gigabot blockAccess
-BrowserMatchNoCase ^gonzo1 blockAccess
-BrowserMatchNoCase ^Google\sSpider blockAccess
-BrowserMatchNoCase ^ichiro blockAccess
-BrowserMatchNoCase ^ie_crawler blockAccess
-BrowserMatchNoCase ^iGetter blockAccess
-BrowserMatchNoCase ^IRLbot blockAccess
-BrowserMatchNoCase Jakarta blockAccess
-BrowserMatchNoCase ^Java blockAccess
-BrowserMatchNoCase ^KrakSpider blockAccess
-BrowserMatchNoCase ^larbin blockAccess
-BrowserMatchNoCase ^LeechGet blockAccess
-BrowserMatchNoCase ^LinkWalker blockAccess
-BrowserMatchNoCase ^Lsearch blockAccess
-BrowserMatchNoCase ^Microsoft blockAccess
-BrowserMatchNoCase ^MJ12bot blockAccess
-BrowserMatchNoCase MSIECrawler blockAccess
-BrowserMatchNoCase ^MSRBOT blockAccess
-BrowserMatchNoCase ^noxtrumbot blockAccess
-BrowserMatchNoCase ^NutchCVS blockAccess
-BrowserMatchNoCase ^RealDownload blockAccess
-BrowserMatchNoCase ^Rome blockAccess
-BrowserMatchNoCase ^Roverbot blockAccess
-BrowserMatchNoCase ^schibstedsokbot blockAccess
-BrowserMatchNoCase ^Seekbot blockAccess
-BrowserMatchNoCase ^SiteSnagger blockAccess
-BrowserMatchNoCase ^SiteSucker blockAccess
-BrowserMatchNoCase ^Snapbot blockAccess
-BrowserMatchNoCase ^sogou blockAccess
-BrowserMatchNoCase ^SpiderKU blockAccess
-BrowserMatchNoCase ^SpiderMan blockAccess
-BrowserMatchNoCase ^Squid blockAccess
-BrowserMatchNoCase ^Teleport blockAccess
-BrowserMatchNoCase ^User-Agent\: blockAccess
-BrowserMatchNoCase VoilaBot blockAccess
-BrowserMatchNoCase ^voyager blockAccess
-BrowserMatchNoCase ^W3C blockAccess
-BrowserMatchNoCase ^w3search blockAccess
-BrowserMatchNoCase ^Web\sDownloader blockAccess
-BrowserMatchNoCase ^WebCopier blockAccess
-BrowserMatchNoCase ^WebDevil blockAccess
-BrowserMatchNoCase ^WebSec blockAccess
-BrowserMatchNoCase ^WebVac blockAccess
-BrowserMatchNoCase ^Webwhacker blockAccess
-BrowserMatchNoCase ^Webzip blockAccess
-BrowserMatchNoCase ^Wells blockAccess
-BrowserMatchNoCase ^WhoWhere blockAccess
-BrowserMatchNoCase www\.netforex\.org blockAccess
-BrowserMatchNoCase ^WX_mail blockAccess
-BrowserMatchNoCase ^yacybot blockAccess
-BrowserMatchNoCase ^ZIBB blockAccess
-BrowserMatchNoCase ^$ blockAccess
-
 RedirectMatch /foswiki/?$ /cgi-bin/foswiki/view$1
 RedirectMatch /foswiki(/([A-Z].*)?)?$ /cgi-bin/foswiki/view$1
 
-#RewriteEngine on
-#RewriteRule ^/foswiki$ /cgi-bin/foswiki/view
-#RewriteRule ^/foswiki/$ /cgi-bin/foswiki/view
-
-#RewriteRule ^configure$ /bin/configure
-#RewriteRule ^([A-Z].*) /bin/view/$1 [PT] [L]
-
-
+#see /etc/foswiki/ShorterUrl.conf to activate ShorterUrls
 
 # The ScriptAlias defines the bin directory as a directory where CGI
 # scripts are allowed.
@@ -133,23 +57,19 @@ SetEnvIf Request_URI "foswiki/pub/System/.*\.[hH][tT][mM][lL]?$" !blockAccess
     # File to return on access control error (e.g. wrong password)
     ErrorDocument 401 /cgi-bin/foswiki/view/System/UserRegistration
 
-# Limit access to configure to specific IP addresses and or users.
 # Make sure configure is not open to the general public.
 # It exposes system details that can help attackers.
 <FilesMatch "^(configure)$">
     SetHandler cgi-script
-    Order Deny,Allow
-    Deny from all
-    Allow from 127.0.0.1
     Require user %CONFIGUSER%
 </FilesMatch>
 
 # When using Apache type login the following defines the Foswiki scripts
 # that makes Apache ask the browser to authenticate. It is correct that
 # scripts such as view are not authenticated.
-<FilesMatch "(attach|edit|manage|rename|save|upload|mail|logon|rest|.*auth).*">
-	require valid-user
-</FilesMatch>
+#<FilesMatch "(attach|edit|manage|rename|save|upload|mail|logon|rest|.*auth).*">
+#	require valid-user
+#</FilesMatch>
 
 </Directory>
 
