Item2106: Move /usr/lib/cgi-bin/foswiki/ to /usr/share/foswiki/bin/    Loosen permissions so online extensions may be installed to cgi dir.
git-svn-id: http://svn.foswiki.org/branches/Release01x00@5172 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/core/tools/pkg/debian/ShorterUrl.conf
+++ b/core/tools/pkg/debian/ShorterUrl.conf
@@ -12,8 +12,8 @@
 
 <Directory /var/www>
     RewriteEngine on
-    RewriteRule ^$ /cgi-bin/foswiki/view/$1 [PT] [L]
-    RewriteRule ^([A-Z].*) /cgi-bin/foswiki/view/$1 [PT] [L]
-    RewriteRule ^(foswiki_redirect_cache.*) /cgi-bin/foswiki/view/$1 [PT] [L]
+    RewriteRule ^$ /foswiki/bin/view/$1 [PT] [L]
+    RewriteRule ^([A-Z].*) /foswiki/bin/view/$1 [PT] [L]
+    RewriteRule ^(foswiki_redirect_cache.*) /foswiki/bin/view/$1 [PT] [L]
 </Directory>
 
