--- a/core/tools/pkg/debian/apache.conf
+++ b/core/tools/pkg/debian/apache.conf
@@ -15,8 +15,8 @@
 # BrowserMatchNoCase ^SiteSucker blockAccess
 # BrowserMatchNoCase ^$ blockAccess
 
-RedirectMatch /foswiki/?$ /cgi-bin/foswiki/view$1
-RedirectMatch /foswiki(/([A-Z].*)?)?$ /cgi-bin/foswiki/view$1
+RedirectMatch /foswiki/?$ /foswiki/bin/view$1
+RedirectMatch /foswiki(/([A-Z].*)?)?$ /foswiki/bin/view$1
 
 #see /etc/foswiki/ShorterUrl.conf to activate ShorterUrls
 
@@ -25,7 +25,7 @@ RedirectMatch /foswiki(/([A-Z].*)?)?$ /cgi-bin/foswiki/view$1
 # The first parameter will be part of the URL to your installation e.g.
 # http://my.co.uk/foswiki/bin/view/...
 # The second parameter must point to the physical path on your disc.
-#ScriptAlias /foswiki/bin "/var/lib/foswiki/bin"
+ScriptAlias /foswiki/bin "/usr/share/foswiki/bin"
 
 # The Alias defines a url that points to the root of the foswiki installation.
 # It is used to access files in the pub directory (attachments etc)
@@ -40,7 +40,7 @@ SetEnvIf Request_URI "foswiki/pub/System/.*\.[hH][tT][mM][lL]?$" !blockAccess
 # This specifies the options on the Foswiki scripts directory. The ExecCGI
 # and SetHandler tell apache that it contains scripts. "Allow from all"
 # lets any IP address access this URL.
-<Directory "/usr/lib/cgi-bin/foswiki/">
+<Directory "/usr/share/foswiki/bin">
     AllowOverride all
     Order Allow,Deny
     Allow from all
@@ -55,7 +55,7 @@ SetEnvIf Request_URI "foswiki/pub/System/.*\.[hH][tT][mM][lL]?$" !blockAccess
     AuthType Basic
 
     # File to return on access control error (e.g. wrong password)
-    ErrorDocument 401 /cgi-bin/foswiki/view/System/UserRegistration
+    ErrorDocument 401 /foswiki/bin/view/System/UserRegistration
 
 # Make sure configure is not open to the general public.
 # It exposes system details that can help attackers.
@@ -91,7 +91,7 @@ SetEnvIf Request_URI "foswiki/pub/System/.*\.[hH][tT][mM][lL]?$" !blockAccess
     AddType text/plain .shtml .php .php3 .phtml .phtm .pl .py .cgi
 
     #for TWikiCompatibility - or even to make 'attachment not found's more user friendly
-    ErrorDocument 404 /cgi-bin/foswiki/viewfile
+    ErrorDocument 404 /foswiki/bin/viewfile
 
 #
 #add an Expires header that is sufficiently in the future that the browser does not even ask if its uptodate
