--- a/core/tools/pkg/debian/LocalSite.cfg
+++ b/core/tools/pkg/debian/LocalSite.cfg
@@ -1,7 +1,7 @@
 $Foswiki::cfg{DataDir} = '/var/lib/foswiki/data';
 $Foswiki::cfg{Site}{Lang} = 'en';
 $Foswiki::cfg{LocalesDir} = '/var/lib/foswiki/locale';
-$Foswiki::cfg{ScriptUrlPath} = '/cgi-bin/foswiki';
+$Foswiki::cfg{ScriptUrlPath} = '/foswiki/bin';
 $Foswiki::cfg{DefaultUrlHost} = 'http://your.domain.com';
 $Foswiki::cfg{PermittedRedirectHostUrls} = 'http://localhost';
 $Foswiki::cfg{Site}{FullLang} = 'en-us';
