Item2106: fix build after /usr/share/foswiki/bin move
git-svn-id: http://svn.foswiki.org/branches/Release01x00@5198 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/core/tools/pkg/debian/rules
+++ b/core/tools/pkg/debian/rules
@@ -38,7 +38,7 @@ install: build
 
 	echo `pwd`
 
-	cp bin/* debian/foswiki/usr/share/foswiki/bin/
+	mv bin/* debian/foswiki/usr/share/foswiki/bin/
 	cp debian/foswiki/usr/share/foswiki/bin/LocalLib.cfg.txt debian/foswiki/usr/share/foswiki/bin/LocalLib.cfg
 
 	chmod 755 debian/foswiki/usr/share/foswiki/bin/*
@@ -57,7 +57,7 @@ install: build
 	cp -pR data debian/foswiki/var/lib/foswiki/
 
     #move configure's logos and css to /var/lib/foswiki/pub/logos
-	mv debian/foswiki/usr/lib/cgi-bin/foswiki/logos debian/foswiki/var/lib/foswiki/pub/
+	mv debian/foswiki/usr/share/foswiki/bin/logos debian/foswiki/var/lib/foswiki/pub/
 
 	#create mailnotify timestamps
 	date +%s > debian/foswiki/var/lib/foswiki/data/System/.mailnotify
