--- a/core/tools/pkg/debian/LocalSite.cfg
+++ b/core/tools/pkg/debian/LocalSite.cfg
@@ -3,7 +3,7 @@ $Foswiki::cfg{Site}{Lang} = 'en';
 $Foswiki::cfg{LocalesDir} = '/var/lib/foswiki/locale';
 $Foswiki::cfg{ScriptUrlPath} = '/foswiki/bin';
 $Foswiki::cfg{DefaultUrlHost} = 'http://your.domain.com';
-$Foswiki::cfg{PermittedRedirectHostUrls} = 'http://localhost';
+$Foswiki::cfg{PermittedRedirectHostUrls} = 'http://localhost;http://127.0.0.1';
 $Foswiki::cfg{Site}{FullLang} = 'en-us';
 $Foswiki::cfg{PubUrlPath} = '/foswiki/pub';
 $Foswiki::cfg{PubDir} = '/var/lib/foswiki/pub';
