Item2219: make the redirectmatch /cgi-bin/foswiki for previous debian packages  actually work
git-svn-id: http://svn.foswiki.org/branches/Release01x00@5234 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/core/tools/pkg/debian/apache.conf
+++ b/core/tools/pkg/debian/apache.conf
@@ -15,11 +15,11 @@
 # BrowserMatchNoCase ^SiteSucker blockAccess
 # BrowserMatchNoCase ^$ blockAccess
 
+#support the cgi-bin url's
+RedirectMatch /cgi-bin/foswiki/(.*)$ /foswiki/bin/$1
+
 RedirectMatch /foswiki/?$ /foswiki/bin/view$1
 RedirectMatch /foswiki(/([A-Z].*)?)?$ /foswiki/bin/view$1
-
-#support the cgi-bin url's
-RedirectMatch /cgi-bin/foswiki/?$ /foswiki/bin/$1
 
 #see /etc/foswiki/ShorterUrl.conf to activate ShorterUrls
 
