Item8300: carry 1.0.7-3 Debian packaging forward verbatim to trunk
git-svn-id: http://svn.foswiki.org/trunk@5241 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/core/tools/pkg/debian/LocalSite.cfg
+++ b/core/tools/pkg/debian/LocalSite.cfg
@@ -1,9 +1,9 @@
 $Foswiki::cfg{DataDir} = '/var/lib/foswiki/data';
 $Foswiki::cfg{Site}{Lang} = 'en';
 $Foswiki::cfg{LocalesDir} = '/var/lib/foswiki/locale';
-$Foswiki::cfg{ScriptUrlPath} = '/cgi-bin/foswiki';
+$Foswiki::cfg{ScriptUrlPath} = '/foswiki/bin';
 $Foswiki::cfg{DefaultUrlHost} = 'http://your.domain.com';
-$Foswiki::cfg{PermittedRedirectHostUrls} = 'http://localhost';
+$Foswiki::cfg{PermittedRedirectHostUrls} = 'http://localhost;http://127.0.0.1';
 $Foswiki::cfg{Site}{FullLang} = 'en-us';
 $Foswiki::cfg{PubUrlPath} = '/foswiki/pub';
 $Foswiki::cfg{PubDir} = '/var/lib/foswiki/pub';
