--- a/core/tools/pkg/debian/control
+++ b/core/tools/pkg/debian/control
@@ -7,6 +7,8 @@ Standards-Version: 3.8.3
 
 Package: foswiki-core
 Architecture: all
+Conflicts: foswiki (<= 1.1.0-auto6019)
+Replaces: foswiki (<= 1.1.0-auto6019)
 Depends: ${perl:Depends}, ${misc:Depends}, libnet-perl, libmime-base64-perl, rcs (>= 5.7), apache | apache2 | apache2.2, debconf (>=  0.5) | debconf-2.0, libalgorithm-diff-perl, liberror-perl, libdigest-sha1-perl, libtext-diff-perl, liblocale-maketext-lexicon-perl, libcgi-session-perl, liburi-perl, libhtml-parser-perl
 Suggests: libunicode-maputf8-perl, libapache-mod-perl, libapache2-mod-perl2, libapache2-mod-auth-plain
 Description: A Web Based Collaboration Platform
