Item2655: foswiki 1.0.9 debian package update
git-svn-id: http://svn.foswiki.org/branches/Release01x00@6080 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/core/tools/pkg/debian/apache.conf
+++ b/core/tools/pkg/debian/apache.conf
@@ -16,10 +16,10 @@
 # BrowserMatchNoCase ^$ blockAccess
 
 #support the cgi-bin url's
-RedirectMatch /cgi-bin/foswiki/(.*)$ /foswiki/bin/$1
+RedirectMatch ^/cgi-bin/foswiki/(.*)$ /foswiki/bin/$1
 
-RedirectMatch /foswiki/?$ /foswiki/bin/view$1
-RedirectMatch /foswiki(/([A-Z].*)?)?$ /foswiki/bin/view$1
+RedirectMatch ^/foswiki/?$ /foswiki/bin/view$1
+RedirectMatch ^/foswiki(/([A-Z].*)?)?$ /foswiki/bin/view$1
 
 #see /etc/foswiki/ShorterUrl.conf to activate ShorterUrls
 
