--- a/JQueryPlugin/pub/System/JQueryPlugin/plugins/masonry/Makefile
+++ b/JQueryPlugin/pub/System/JQueryPlugin/plugins/masonry/Makefile
@@ -1,6 +1,7 @@
 TARGET=\
   jquery.masonry.js \
   jquery.masonry.init.js \
+  jquery.masonry.css \
   $(JQUERYPLUGIN_LIB)/MASONRY.pm
 
 -include ../../Makefile.include
