--- a/JQueryPlugin/pub/System/JQueryPlugin/plugins/simplemodal/Makefile
+++ b/JQueryPlugin/pub/System/JQueryPlugin/plugins/simplemodal/Makefile
@@ -1,5 +1,6 @@
 TARGET=\
   jquery.simplemodal.js \
+  jquery.simplemodal.init.js \
   jquery.simplemodal.css \
   $(JQUERYPLUGIN_LIB)/SIMPLEMODAL.pm
 
