Item8299: Basic working localhost configuration .deb for foswiki on apache2
git-svn-id: http://svn.foswiki.org/trunk@6683 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/core/tools/pkg/debian/control
+++ b/core/tools/pkg/debian/control
@@ -44,7 +44,7 @@ Package: foswiki-configure-apache2-basic
 Provides: foswiki-configuration
 Conflicts: foswiki-configuration
 Architecture: all
-Depends: ${perl:Depends}, ${misc:Depends}, foswiki-cgi
+Depends: ${perl:Depends}, ${misc:Depends}, foswiki-core
 Description: Foswiki Apache2 site configuration
  This is a simple Apache2 site configuration for testing and evaluation.
  You need to either manually configure Foswiki or choose on of the
