Item8299: reduce number and urgency of debconf questions - not yet used
git-svn-id: http://svn.foswiki.org/trunk@6685 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/core/tools/pkg/debian/foswiki-configure-apache2-basic.config
+++ b/core/tools/pkg/debian/foswiki-configure-apache2-basic.config
@@ -8,10 +8,8 @@ set -e
 # What is the top-level URL of the server Foswiki runs under?
 # high = Items that don't have a reasonable default
 # unless we preload it with mailname...
-db_input high foswiki/defaultUrlHost || true
-db_input high foswiki/wikiwebmaster || true
-# medium = Normal items that have reasonable defaults.
-db_input medium foswiki/samplefiles || true
+db_input medium foswiki/defaultUrlHost || true
+db_input medium foswiki/wikiwebmaster || true
 
 db_go || true
 
