Item8299: add the symlinks to enable the default apache.conf in foswiki-configure-apache2-basic.deb
git-svn-id: http://svn.foswiki.org/trunk@6688 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/core/tools/pkg/debian/rules
+++ b/core/tools/pkg/debian/rules
@@ -89,6 +89,9 @@ install: build
 
 
 	cp debian/apache.conf debian/foswiki-configure-apache2-basic/etc/foswiki/
+	ln -s /etc/foswiki/apache.conf debian/foswiki-configure-apache2-basic/etc/apache2/sites-available/foswiki.conf
+	ln -s ../sites-available/foswiki.conf debian/foswiki-configure-apache2-basic/etc/apache2/sites-enabled/foswiki.conf
+
 	for dir in var/log/foswiki var/lib/foswiki/working var/lib/foswiki/working/work_areas ; \
 	  do chown www-data:www-data debian/foswiki-configure-apache2-basic/$$dir ; done
 
