Item8697:    * upgraded =validate= to v1.7;    * added =wikiword= validation method;    * fixed computation of line-height in =fluidfont=;    * fixed height issue in =tabpane=
git-svn-id: http://svn.foswiki.org/trunk@6748 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/JQueryPlugin/pub/System/JQueryPlugin/plugins/validate/Makefile
+++ b/JQueryPlugin/pub/System/JQueryPlugin/plugins/validate/Makefile
@@ -1,2 +1,12 @@
-TARGET=jquery.validate.js jquery.validate.additional-methods.js $(JQUERYPLUGIN_LIB)/VALIDATE.pm
+TARGET=\
+  jquery.validate.js \
+  jquery.validate.methods.js \
+  $(JQUERYPLUGIN_LIB)/VALIDATE.pm
+
 -include ../../Makefile.include
+
+jquery.validate.methods.uncompressed.js: \
+  jquery.validate.additional-methods.uncompressed.js \
+  jquery.validate.foswiki-methods.uncompressed.js
+	@echo creating validation methods
+	@$(CAT) $+ > $@
