Item8697: minor Makefile improvements
git-svn-id: http://svn.foswiki.org/trunk@6749 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/JQueryPlugin/pub/System/JQueryPlugin/Makefile.include
+++ b/JQueryPlugin/pub/System/JQueryPlugin/Makefile.include
@@ -1,4 +1,4 @@
-FOSWIKI_ROOT=~/foswiki/trunk/core
+FOSWIKI_ROOT?=~/foswiki/trunk/core
 FOSWIKI_LIB=$(FOSWIKI_ROOT)/lib
 JQUERYPLUGIN_LIB=$(FOSWIKI_LIB)/Foswiki/Plugins/JQueryPlugin
 MINIFYJS=$(YUI_MINIFYJS)
