--- a/core/tools/pkg/debian/control
+++ b/core/tools/pkg/debian/control
@@ -2,7 +2,7 @@ Source: foswiki
 Section: web
 Priority: optional
 Maintainer: Drake Diedrich <dld@google.com>
-Build-Depends: debhelper (>= 7), tardy, po-debconf, dpatch
+Build-Depends: debhelper (>= 7), tardy, po-debconf, dpatch, java-runtime
 Standards-Version: 3.8.3
 
 Package: foswiki-core
